DS: fix default value in pyclient. try alternative in UserImage affair