@@ -1,16 +1,9 @@
 package model.data;
 
-import javafx.beans.property.*;
-import org.apache.commons.codec.binary.Base64;
-
-import javax.xml.bind.DatatypeConverter;
-import java.io.DataInputStream;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+import org.apache.commons.io.FileUtils;
+import java.io.*;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 
 public class User {
@@ -38,7 +31,7 @@ public class User {
     }
 
     public User(long id, String username, String publicName, String image, String password,
-                UserSettings userSettings, List<GameStatistic> userStatistic) {
+                UserSettings userSettings, List<GameStatistic> userStatistic) throws IOException {
         this.id = id;
         this.username = username;
         this.publicName = publicName;
@@ -48,7 +41,7 @@ public class User {
         this.gameStatistics = userStatistic;
     }
 
-    public User(long id, String username, String publicName, String image, String password, UserSettings userSettings, UserStatistic userStatistic) {
+    public User(long id, String username, String publicName, String image, String password, UserSettings userSettings, UserStatistic userStatistic) throws IOException {
         this.id = id;
         this.username = username;
         this.publicName = publicName;
@@ -59,16 +52,15 @@ public class User {
     }
 
     public String decodeImage(String imagePath) {
-
-        String base64 = null;
         try {
-            base64 = DatatypeConverter.printBase64Binary(Files.readAllBytes(
-                    Paths.get(imagePath)));
+            System.out.println(new File(".").getAbsoluteFile());
+            byte[] fileContent = FileUtils.readFileToByteArray(new File(imagePath));
+            String encodedString = Base64.getEncoder().encodeToString(fileContent);
+            return encodedString;
         } catch (IOException e) {
             e.printStackTrace();
         }
-
-        return base64;
+        return "default";
     }
 
 
